--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  image_picker: ^0.6.5
+  image_cropper: ^1.2.1
+  shared_preferences: ^0.5.7
+  font_awesome_flutter: ^8.8.1
+  flutter_inner_drawer: ^0.5.6+1
+  carousel_slider: ^2.0.0
+  http: ^0.12.1
+  dio: ^3.0.9
+  connectivity: ^0.4.8+6
+  flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
   flutter_test:
@@ -45,32 +55,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  assets:
+   - assets/images
+  fonts:
+    - family: Karla
+      fonts:
+        - asset: assets/fonts/Karla-Bold.ttf
+        - asset: assets/fonts/Karla-Regular.ttf
+        - asset: assets/fonts/Karla-BoldItalic.ttf
+        - asset: assets/fonts/Karla-Italic.ttf
+    - family: Pacifico
+      fonts:
+        - asset: assets/fonts/Pacifico-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
