--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   carousel_slider: ^2.0.0
   http: ^0.12.1
   dio: ^3.0.9
+  firebase_core: ^0.4.5
   connectivity: ^0.4.8+6
   flutter_secure_storage: ^3.3.3
 
@@ -55,8 +56,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-   - assets/images
+#  assets:
+#   - assets/images
   fonts:
     - family: Karla
       fonts:
