added icons fixed bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
 #  assets:
 #   - assets/images
   fonts:
+    - family: EcommerceAppUI
+      fonts:
+        - asset: assets/fonts/EcommerceAppUI.ttf
     - family: Karla
       fonts:
         - asset: assets/fonts/Karla-Bold.ttf
