--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   connectivity: ^0.4.8+6
   true_time: ^0.1.0
   provider: ^4.0.5+1
+  flutter_spinkit: ^4.1.2
   ntp: ^1.0.6
   flutter_secure_storage: ^3.3.3
 
