--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   image_cropper: ^1.2.1
   shared_preferences: ^0.5.7
   font_awesome_flutter: ^8.8.1
-  flutter_inner_drawer: ^0.5.6+1
   carousel_slider: ^2.0.0
   http: ^0.12.1
   dio: ^3.0.9
@@ -40,7 +39,9 @@ dependencies:
   provider: ^4.0.5+1
   flutter_spinkit: ^4.1.2
   circular_countdown_timer: ^0.0.4
+  flip_box_bar_plus: ^0.9.3
   ntp: ^1.0.6
+  fluttertoast: ^3.1.3
   flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
@@ -60,7 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/connection_lost.png
+   - assets/images/
   fonts:
     - family: EcommerceAppUI
       fonts:
