--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  image_picker: ^0.6.5
-  image_cropper: ^1.2.1
+  url_launcher: ^5.5.0
   shared_preferences: ^0.5.7
   font_awesome_flutter: ^8.8.1
   carousel_slider: ^2.0.0
   http: ^0.12.1
   dio: ^3.0.9
-  connectivity: ^0.4.8+6
+  connectivity: ^0.4.9
   provider: ^4.0.5+1
   flutter_spinkit: ^4.1.2
   circular_countdown_timer: ^0.0.4
