--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   carousel_slider: ^2.0.0
   http: ^0.12.1
   dio: ^3.0.9
+  intl: ^0.16.1
   connectivity: ^0.4.9
   provider: ^4.0.5+1
   flutter_spinkit: ^4.1.2
@@ -42,6 +43,7 @@ dependencies:
   flip_box_bar_plus: ^0.9.3
   ntp: ^1.0.6
   fluttertoast: ^3.1.3
+  razorpay_flutter: ^1.2.2
   flutter_secure_storage: ^3.3.3
 
 dev_dependencies:
